@@ -7,6 +7,8 @@
 					http://gollem.swi.psy.uva.nl/bugzilla/
 					--------------------------------------
 
+  * FIXED: exitPrologThreads() counting problem.
+
   * FIXED: Syntax error in pl-atom.c
 
   * FIXED: MT: Problem in the atom-garbage collector reclaiming atoms
